--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
               <use href="./img/logo.svg"></use>
             </svg>
           </a>
+          <h1>Рубаємо домашку # 9</h1>
           <ul class="nav-list">
             <li class="nav-item">
               <a class="nav-link {=$highlight-act}" href="./1-gallery.html"
