--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -13,7 +13,7 @@
         <h1 class="main-title">GALLERY</h1>
         <a class="back-link" href="./index.html">Go back</a>
       </div>
-      <div class="container gallery"></div>
+      <ul class="gallery container"></ul>
     </main>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
